y.output
Terminals unused in grammar

   DO
   BREAK
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_decl_prefix: type_specifier ID

    7 $@1: /* empty */

    8 func_definition: func_decl_prefix LPAREN parameter_list RPAREN $@1 compound_statement

    9 @2: /* empty */

   10 func_definition: func_decl_prefix LPAREN RPAREN @2 compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 $@3: /* empty */

   16 compound_statement: LCURL $@3 statements RCURL

   17 $@4: /* empty */

   18 compound_statement: LCURL $@4 RCURL

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID
   22               | CHAR
   23               | DOUBLE

   24 declaration_list: declaration_list COMMA ID
   25                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   26                 | ID
   27                 | ID LTHIRD CONST_INT RTHIRD

   28 var_declaration: type_specifier declaration_list SEMICOLON

   29 statements: statement
   30           | statements statement

   31 statement: var_declaration
   32          | expression_statement
   33          | compound_statement
   34          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement
   36          | IF LPAREN expression RPAREN statement ELSE statement
   37          | WHILE LPAREN expression RPAREN statement
   38          | PRINTLN LPAREN ID RPAREN SEMICOLON
   39          | RETURN expression SEMICOLON

   40 expression_statement: SEMICOLON
   41                     | expression SEMICOLON

   42 variable: ID
   43         | ID LTHIRD expression RTHIRD

   44 expression: logic_expression
   45           | variable ASSIGNOP logic_expression

   46 logic_expression: rel_expression
   47                 | rel_expression LOGICOP rel_expression

   48 rel_expression: simple_expression
   49               | simple_expression RELOP simple_expression

   50 simple_expression: term
   51                  | simple_expression ADDOP term

   52 term: unary_expression
   53     | term MULOP unary_expression

   54 unary_expression: ADDOP unary_expression
   55                 | NOT unary_expression
   56                 | factor

   57 factor: variable

   58 $@5: /* empty */

   59 factor: ID LPAREN $@5 argument_list RPAREN
   60       | LPAREN expression RPAREN
   61       | CONST_INT
   62       | CONST_FLOAT
   63       | variable INCOP
   64       | variable DECOP

   65 argument_list: arguments
   66              | /* empty */

   67 arguments: arguments COMMA logic_expression
   68          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 35 36
ELSE (259) 36
FOR (260) 34
WHILE (261) 37
DO (262)
BREAK (263)
INT (264) 19
CHAR (265) 22
FLOAT (266) 20
DOUBLE (267) 23
VOID (268) 21
RETURN (269) 39
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 38
ADDOP (275) 51 54
MULOP (276) 53
INCOP (277) 63
DECOP (278) 64
RELOP (279) 49
ASSIGNOP (280) 45
LOGICOP (281) 47
NOT (282) 55
LPAREN (283) 8 10 34 35 36 37 38 59 60
RPAREN (284) 8 10 34 35 36 37 38 59 60
LCURL (285) 16 18
RCURL (286) 16 18
LTHIRD (287) 25 27 43
RTHIRD (288) 25 27 43
COMMA (289) 11 12 24 25 67
SEMICOLON (290) 28 38 39 40 41
CONST_INT (291) 25 27 61
CONST_FLOAT (292) 62
ID (293) 6 11 13 24 25 26 27 38 42 43 59
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_decl_prefix (44)
    on left: 6, on right: 8 10
func_definition (45)
    on left: 8 10, on right: 5
$@1 (46)
    on left: 7, on right: 8
@2 (47)
    on left: 9, on right: 10
parameter_list (48)
    on left: 11 12 13 14, on right: 8 11 12
compound_statement (49)
    on left: 16 18, on right: 8 10 33
$@3 (50)
    on left: 15, on right: 16
$@4 (51)
    on left: 17, on right: 18
type_specifier (52)
    on left: 19 20 21 22 23, on right: 6 11 12 13 14 28
declaration_list (53)
    on left: 24 25 26 27, on right: 24 25 28
var_declaration (54)
    on left: 28, on right: 4 31
statements (55)
    on left: 29 30, on right: 16 30
statement (56)
    on left: 31 32 33 34 35 36 37 38 39, on right: 29 30 34 35 36 37
expression_statement (57)
    on left: 40 41, on right: 32 34
variable (58)
    on left: 42 43, on right: 45 57 63 64
expression (59)
    on left: 44 45, on right: 34 35 36 37 39 41 43 60
logic_expression (60)
    on left: 46 47, on right: 44 45 67 68
rel_expression (61)
    on left: 48 49, on right: 46 47
simple_expression (62)
    on left: 50 51, on right: 48 49 51
term (63)
    on left: 52 53, on right: 50 51 53
unary_expression (64)
    on left: 54 55 56, on right: 52 53 54 55
factor (65)
    on left: 57 59 60 61 62 63 64, on right: 56
$@5 (66)
    on left: 58, on right: 59
argument_list (67)
    on left: 65 66, on right: 59
arguments (68)
    on left: 67 68, on right: 65 67


State 0

    0 $accept: . start $end

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    start             go to state 6
    program           go to state 7
    unit              go to state 8
    func_decl_prefix  go to state 9
    func_definition   go to state 10
    type_specifier    go to state 11
    var_declaration   go to state 12


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   22 type_specifier: CHAR .

    $default  reduce using rule 22 (type_specifier)


State 3

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 4

   23 type_specifier: DOUBLE .

    $default  reduce using rule 23 (type_specifier)


State 5

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 6

    0 $accept: start . $end

    $end  shift, and go to state 13


State 7

    1 start: program .
    2 program: program . unit

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    $default  reduce using rule 1 (start)

    unit              go to state 14
    func_decl_prefix  go to state 9
    func_definition   go to state 10
    type_specifier    go to state 11
    var_declaration   go to state 12


State 8

    3 program: unit .

    $default  reduce using rule 3 (program)


State 9

    8 func_definition: func_decl_prefix . LPAREN parameter_list RPAREN $@1 compound_statement
   10                | func_decl_prefix . LPAREN RPAREN @2 compound_statement

    LPAREN  shift, and go to state 15


State 10

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 11

    6 func_decl_prefix: type_specifier . ID
   28 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 16

    declaration_list  go to state 17


State 12

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 13

    0 $accept: start $end .

    $default  accept


State 14

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 15

    8 func_definition: func_decl_prefix LPAREN . parameter_list RPAREN $@1 compound_statement
   10                | func_decl_prefix LPAREN . RPAREN @2 compound_statement

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 16

    6 func_decl_prefix: type_specifier ID .
   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 21

    LPAREN    reduce using rule 6 (func_decl_prefix)
    $default  reduce using rule 26 (declaration_list)


State 17

   24 declaration_list: declaration_list . COMMA ID
   25                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD
   28 var_declaration: type_specifier declaration_list . SEMICOLON

    COMMA      shift, and go to state 22
    SEMICOLON  shift, and go to state 23


State 18

   10 func_definition: func_decl_prefix LPAREN RPAREN . @2 compound_statement

    $default  reduce using rule 9 (@2)

    @2  go to state 24


State 19

    8 func_definition: func_decl_prefix LPAREN parameter_list . RPAREN $@1 compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID
   12               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   13 parameter_list: type_specifier . ID
   14               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 14 (parameter_list)


State 21

   27 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 28


State 22

   24 declaration_list: declaration_list COMMA . ID
   25                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 29


State 23

   28 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 28 (var_declaration)


State 24

   10 func_definition: func_decl_prefix LPAREN RPAREN @2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 25

    8 func_definition: func_decl_prefix LPAREN parameter_list RPAREN . $@1 compound_statement

    $default  reduce using rule 7 ($@1)

    $@1  go to state 32


State 26

   11 parameter_list: parameter_list COMMA . type_specifier ID
   12               | parameter_list COMMA . type_specifier

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    type_specifier  go to state 33


State 27

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 28

   27 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 34


State 29

   24 declaration_list: declaration_list COMMA ID .
   25                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 35

    $default  reduce using rule 24 (declaration_list)


State 30

   16 compound_statement: LCURL . $@3 statements RCURL
   18                   | LCURL . $@4 RCURL

    RCURL     reduce using rule 17 ($@4)
    $default  reduce using rule 15 ($@3)

    $@3  go to state 36
    $@4  go to state 37


State 31

   10 func_definition: func_decl_prefix LPAREN RPAREN @2 compound_statement .

    $default  reduce using rule 10 (func_definition)


State 32

    8 func_definition: func_decl_prefix LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 38


State 33

   11 parameter_list: parameter_list COMMA type_specifier . ID
   12               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 39

    $default  reduce using rule 12 (parameter_list)


State 34

   27 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 27 (declaration_list)


State 35

   25 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 40


State 36

   16 compound_statement: LCURL $@3 . statements RCURL

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    DOUBLE       shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    compound_statement    go to state 53
    type_specifier        go to state 54
    var_declaration       go to state 55
    statements            go to state 56
    statement             go to state 57
    expression_statement  go to state 58
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 37

   18 compound_statement: LCURL $@4 . RCURL

    RCURL  shift, and go to state 67


State 38

    8 func_definition: func_decl_prefix LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 8 (func_definition)


State 39

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


State 40

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 68


State 41

   35 statement: IF . LPAREN expression RPAREN statement
   36          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 69


State 42

   34 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 70


State 43

   37 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 71


State 44

   39 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 72
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 45

   38 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 73


State 46

   54 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable          go to state 74
    unary_expression  go to state 75
    factor            go to state 66


State 47

   55 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable          go to state 74
    unary_expression  go to state 76
    factor            go to state 66


State 48

   60 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 77
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 49

   40 expression_statement: SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 50

   61 factor: CONST_INT .

    $default  reduce using rule 61 (factor)


State 51

   62 factor: CONST_FLOAT .

    $default  reduce using rule 62 (factor)


State 52

   42 variable: ID .
   43         | ID . LTHIRD expression RTHIRD
   59 factor: ID . LPAREN $@5 argument_list RPAREN

    LPAREN  shift, and go to state 78
    LTHIRD  shift, and go to state 79

    $default  reduce using rule 42 (variable)


State 53

   33 statement: compound_statement .

    $default  reduce using rule 33 (statement)


State 54

   28 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 80

    declaration_list  go to state 17


State 55

   31 statement: var_declaration .

    $default  reduce using rule 31 (statement)


State 56

   16 compound_statement: LCURL $@3 statements . RCURL
   30 statements: statements . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    DOUBLE       shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 81
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    compound_statement    go to state 53
    type_specifier        go to state 54
    var_declaration       go to state 55
    statement             go to state 82
    expression_statement  go to state 58
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 57

   29 statements: statement .

    $default  reduce using rule 29 (statements)


State 58

   32 statement: expression_statement .

    $default  reduce using rule 32 (statement)


State 59

   45 expression: variable . ASSIGNOP logic_expression
   57 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP     shift, and go to state 83
    DECOP     shift, and go to state 84
    ASSIGNOP  shift, and go to state 85

    $default  reduce using rule 57 (factor)


State 60

   41 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 61

   44 expression: logic_expression .

    $default  reduce using rule 44 (expression)


State 62

   46 logic_expression: rel_expression .
   47                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 87

    $default  reduce using rule 46 (logic_expression)


State 63

   48 rel_expression: simple_expression .
   49               | simple_expression . RELOP simple_expression
   51 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 88
    RELOP  shift, and go to state 89

    $default  reduce using rule 48 (rel_expression)


State 64

   50 simple_expression: term .
   53 term: term . MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 50 (simple_expression)


State 65

   52 term: unary_expression .

    $default  reduce using rule 52 (term)


State 66

   56 unary_expression: factor .

    $default  reduce using rule 56 (unary_expression)


State 67

   18 compound_statement: LCURL $@4 RCURL .

    $default  reduce using rule 18 (compound_statement)


State 68

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 69

   35 statement: IF LPAREN . expression RPAREN statement
   36          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 91
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 70

   34 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    expression_statement  go to state 92
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 71

   37 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 93
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 72

   39 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 94


State 73

   38 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 95


State 74

   57 factor: variable .
   63       | variable . INCOP
   64       | variable . DECOP

    INCOP  shift, and go to state 83
    DECOP  shift, and go to state 84

    $default  reduce using rule 57 (factor)


State 75

   54 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 76

   55 unary_expression: NOT unary_expression .

    $default  reduce using rule 55 (unary_expression)


State 77

   60 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 96


State 78

   59 factor: ID LPAREN . $@5 argument_list RPAREN

    $default  reduce using rule 58 ($@5)

    $@5  go to state 97


State 79

   43 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 98
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 80

   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 21

    $default  reduce using rule 26 (declaration_list)


State 81

   16 compound_statement: LCURL $@3 statements RCURL .

    $default  reduce using rule 16 (compound_statement)


State 82

   30 statements: statements statement .

    $default  reduce using rule 30 (statements)


State 83

   63 factor: variable INCOP .

    $default  reduce using rule 63 (factor)


State 84

   64 factor: variable DECOP .

    $default  reduce using rule 64 (factor)


State 85

   45 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 74
    logic_expression   go to state 99
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 86

   41 expression_statement: expression SEMICOLON .

    $default  reduce using rule 41 (expression_statement)


State 87

   47 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 74
    rel_expression     go to state 100
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 88

   51 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable          go to state 74
    term              go to state 101
    unary_expression  go to state 65
    factor            go to state 66


State 89

   49 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 74
    simple_expression  go to state 102
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 90

   53 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable          go to state 74
    unary_expression  go to state 103
    factor            go to state 66


State 91

   35 statement: IF LPAREN expression . RPAREN statement
   36          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 104


State 92

   34 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    expression_statement  go to state 105
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 93

   37 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 106


State 94

   39 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 39 (statement)


State 95

   38 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 96

   60 factor: LPAREN expression RPAREN .

    $default  reduce using rule 60 (factor)


State 97

   59 factor: ID LPAREN $@5 . argument_list RPAREN

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    $default  reduce using rule 66 (argument_list)

    variable           go to state 74
    logic_expression   go to state 108
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66
    argument_list      go to state 109
    arguments          go to state 110


State 98

   43 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 111


State 99

   45 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 45 (expression)


State 100

   47 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 47 (logic_expression)


State 101

   51 simple_expression: simple_expression ADDOP term .
   53 term: term . MULOP unary_expression

    MULOP  shift, and go to state 90

    $default  reduce using rule 51 (simple_expression)


State 102

   49 rel_expression: simple_expression RELOP simple_expression .
   51 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 88

    $default  reduce using rule 49 (rel_expression)


State 103

   53 term: term MULOP unary_expression .

    $default  reduce using rule 53 (term)


State 104

   35 statement: IF LPAREN expression RPAREN . statement
   36          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    DOUBLE       shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    compound_statement    go to state 53
    type_specifier        go to state 54
    var_declaration       go to state 55
    statement             go to state 112
    expression_statement  go to state 58
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 105

   34 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 59
    expression         go to state 113
    logic_expression   go to state 61
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 106

   37 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    DOUBLE       shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    compound_statement    go to state 53
    type_specifier        go to state 54
    var_declaration       go to state 55
    statement             go to state 114
    expression_statement  go to state 58
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 107

   38 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 115


State 108

   68 arguments: logic_expression .

    $default  reduce using rule 68 (arguments)


State 109

   59 factor: ID LPAREN $@5 argument_list . RPAREN

    RPAREN  shift, and go to state 116


State 110

   65 argument_list: arguments .
   67 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 117

    $default  reduce using rule 65 (argument_list)


State 111

   43 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 43 (variable)


State 112

   35 statement: IF LPAREN expression RPAREN statement .
   36          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 118

    $default  reduce using rule 35 (statement)


State 113

   34 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 119


State 114

   37 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 37 (statement)


State 115

   38 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 38 (statement)


State 116

   59 factor: ID LPAREN $@5 argument_list RPAREN .

    $default  reduce using rule 59 (factor)


State 117

   67 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    variable           go to state 74
    logic_expression   go to state 120
    rel_expression     go to state 62
    simple_expression  go to state 63
    term               go to state 64
    unary_expression   go to state 65
    factor             go to state 66


State 118

   36 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 41
    FOR          shift, and go to state 42
    WHILE        shift, and go to state 43
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    DOUBLE       shift, and go to state 4
    VOID         shift, and go to state 5
    RETURN       shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ADDOP        shift, and go to state 46
    NOT          shift, and go to state 47
    LPAREN       shift, and go to state 48
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51
    ID           shift, and go to state 52

    compound_statement    go to state 53
    type_specifier        go to state 54
    var_declaration       go to state 55
    statement             go to state 121
    expression_statement  go to state 58
    variable              go to state 59
    expression            go to state 60
    logic_expression      go to state 61
    rel_expression        go to state 62
    simple_expression     go to state 63
    term                  go to state 64
    unary_expression      go to state 65
    factor                go to state 66


State 119

   34 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
